--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -52,42 +52,41 @@
     <!-- Logo de la empresa -->
     <div class="logo-container"></div>
     <!-- Formulario de inicio de sesión -->
-    <div class="login-form-container">
-        <div class="container">
-            <h2>Iniciar sesión</h2>
-            <!-- Área para mostrar mensajes de error -->
-            <div id="error-message" class="alert alert-danger" style="display: none;"></div>
-            <div class="login-form">
-                <div class="form-group">
-                    <label for="username">Nombre de usuario</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario">
-                </div>
-                <div class="form-group">
-                    <label for="password">Contraseña</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña">
-                </div>
-                <div class="form-group">
-                    <label for="userType">Selecciona tu tipo de usuario:</label>
-                    <select class="form-control" id="userType" name="userType" onchange="showHideFields()">
-                        <option value="cliente">Cliente</option>
-                        <option value="empleado">Empleado</option>
-                    </select>
-                </div>
-                <div class="form-group" id="clientIdField">
-                    <label for="clientId">Cliente ID:</label>
-                    <input type="text" class="form-control" id="clientId" name="clientId" placeholder="Ingresa tu Cliente ID">
-                </div>
-                <div class="form-group" id="employeeIdField" style="display: none;">
-                    <label for="employeeId">Empleado ID:</label>
-                    <input type="text" class="form-control" id="employeeId" name="employeeId" placeholder="Ingresa tu Empleado ID">
-                </div>
-                <a class="btn btn-primary btn-block" href="https://adolfocorona.github.io/blockchain/myapp/templates/transferencias.html">Iniciar sesión</a>
-              </div>
-            <div class="signup-link">
-                <p>¿No tienes una cuenta? <a href="#" data-toggle="modal" data-target="#registerModal">Regístrate aquí</a></p>
+  <div class="login-form-container">
+    <div class="container">
+        <h2>Iniciar sesión</h2>
+        <div id="error-message" class="alert alert-danger" style="display: none;"></div>
+        <div class="login-form">
+            <div class="form-group">
+                <label for="username">Nombre de usuario</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario">
             </div>
+            <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña">
+            </div>
+            <div class="form-group">
+                <label for="userType">Selecciona tu tipo de usuario:</label>
+                <select class="form-control" id="userType" name="userType" onchange="showHideFields()">
+                    <option value="cliente">Cliente</option>
+                    <option value="empleado">Empleado</option>
+                </select>
+            </div>
+            <div class="form-group" id="clientIdField">
+                <label for="clientId">Cliente ID:</label>
+                <input type="text" class="form-control" id="clientId" name="clientId" placeholder="Ingresa tu Cliente ID">
+            </div>
+            <div class="form-group" id="employeeIdField" style="display: none;">
+                <label for="employeeId">Empleado ID:</label>
+                <input type="text" class="form-control" id="employeeId" name="employeeId" placeholder="Ingresa tu Empleado ID">
+            </div>
+            <button class="btn btn-primary btn-block" onclick="login()">Iniciar sesión</button>
+        </div>
+        <div class="signup-link">
+            <p>¿No tienes una cuenta? <a href="#" data-toggle="modal" data-target="#registerModal">Regístrate aquí</a></p>
         </div>
     </div>
+  </div>
 </div>
 
 <!-- Modal de Registro -->
@@ -151,6 +150,16 @@
             clientIdField.style.display = "none";
             employeeIdField.style.display = "block";
         }
+    }
+
+    // Función de inicio de sesión
+    function login() {
+        var userType = document.getElementById("userType").value;
+        // Guardar el tipo de usuario en localStorage
+        localStorage.setItem("userType", userType);
+        console.log(localStorage);
+        // Redirigir a la página de transferencias
+        window.location.href = "  .html";
     }
 </script>
 
