--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -162,6 +162,26 @@
             </select>
             <button onclick="filtrarTransferencias()">Filtrar</button>
         </div>
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Contenedor de ingresos mensuales -->
+                <div class="col-md-6">
+                    <div class="income-container" id="income-container" style="display: none;">
+                        <h3>Ingresos Mensuales</h3>
+                        <div class="total-amount">Total: MXN 15,000</div>
+                        <!-- Aquí puedes mostrar la lista de ingresos mensuales -->
+                    </div>
+                </div>
+                <!-- Contenedor de egresos mensuales -->
+                <div class="col-md-6">
+                    <div class="expense-container" id="expense-container" style="display: none;">
+                        <h3>Egresos Mensuales</h3>
+                        <div class="total-amount">Total: MXN 10,000</div>
+                        <!-- Aquí puedes mostrar la lista de egresos mensuales -->
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Transferencias -->
         <div class="transferencia-list">
             <!-- Aquí se mostrarán las transferencias filtradas -->
@@ -217,6 +237,11 @@
         localStorage.removeItem("userType");
         // Redirigir a la página de inicio de sesión
         window.location.href = "https://adolfocorona.github.io/blockchain/myapp/templates/home.html";
+    }
+
+    function filtrarTransferencias(){
+        document.getElementById("income-container").style.display = "block";
+        document.getElementById("expense-container").style.display = "block";
     }
 </script>
 </body>
